Fix z-index bug with header author profile image
no issue
- add z-index to `.site-header-content .author-profile-image` so it isn't covered by the header overlay

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1525,6 +1525,7 @@ Usage (In Ghost editor):
     height: 100px;
     margin: 0 0 20px 0;
     box-shadow: rgba(255,255,255,0.1) 0 0 0 6px;
+    z-index: 10;
 }
 
 .site-header-content .author-bio {
